<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Categories">Categories</string>
    <string name="Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pick_your_category_of_interest">Pick your category of interest</string>
    <string name="language">Language</string>
    <string name="view_more">View More</string>
    <string name="sports">Sports</string>
    <string name="General">General</string>
    <string name="Health">Health</string>
    <string name="Business">Business</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Science">"Science</string>
    <string name="Technology">Technology</string>
    <string name="search_hint">Search Article</string>
    <string name="hyperLink"><a href="">Next</a></string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>اللغة العربية</item>

    </string-array>
</resources>