<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.example.newsapp.model.ArticlesItem"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginBottom="20dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".70"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="@id/cardView"
                app:layout_constraintBottom_toBottomOf="@id/cardView"
                app:layout_constraintStart_toStartOf="@id/cardView"
                app:layout_constraintEnd_toEndOf="@id/cardView"
                android:layout_gravity="center"

                />

            <ImageView
                android:id="@+id/articleImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                imgUrl="@{item.urlToImage}"
                />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/authorName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/cardView"
            android:layout_marginTop="10dp"
            android:text="@{item.author}"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/articleTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/authorName_tv"
            app:layout_constraintStart_toStartOf="@id/authorName_tv"
            android:layout_marginTop="10dp"
            android:text="@{item.title}"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_goneMarginTop="20dp" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/articleTitle_tv"
            android:layout_marginEnd="20dp"
            android:text="@{item.publishedAt}"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintTop_toTopOf="@id/time_tv"
            android:layout_marginTop="20dp"
            app:layout_constraintHeight_percent=".1"
            android:layout_marginHorizontal="100dp"
            >

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/text3"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text4"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>